--- a/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Index.cshtml
+++ b/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Index.cshtml
@@ -250,9 +250,9 @@ else
                                         + '</div></div>'
                                         + ' <div class= "">'
                                         + '<a href="/AccountEntity/Account/Profile/' + row.fk_Account + '" target="_blank" class= "user_name text-truncate">'
-                                        + '<span class= "fw-bolder">' + data.fullName + '</span></a> | '
-                                        + '<a href="https://wa.me/' + data.phoneNumber + '" target="_blank" class= "user_name text-truncate">'
-                                        +'<img src="/whatsapp.png"/></a>'
+                                        + '<span class= "fw-bolder">' + data.fullName + '</span></a> '
+                                        + '<a href="https://wa.me/2' + data.phoneNumber + '" target="_blank" class= "user_name text-truncate text-success">'
+                                        +'<i class="fab fa-whatsapp"></i>'
                                         + '<small class= "emp_post text-muted" ></small ></div></div>';
                                 }
                                 else {
@@ -261,9 +261,9 @@ else
                                         + '</div>'
                                         + ' <div class= "">'
                                         + '<a href="/AccountEntity/Account/Profile/' + row.fk_Account + '"  target="_blank" class= "user_name text-truncate">'
-                                        + '<span class= "fw-bolder">' + data.fullName + '</span></a> | '
-                                        + '<a href="https://wa.me/' + data.phoneNumber + '" target="_blank" class= "user_name text-truncate">'
-                                        +'<img src="/whatsapp.png"/></a>'
+                                        + '<span class= "fw-bolder">' + data.fullName + '</span></a> '
+                                        + '<a href="https://wa.me/2' + data.phoneNumber + '" target="_blank" class= "user_name text-truncate text-success">'
+                                        +'<i class="fab fa-whatsapp"></i>'
                                         + '<small class= "emp_post text-muted" ></small ></div></div>';
                                 }
 
