--- a/Dashboard/Areas/PlayerMarkEntity/Views/PlayerMark/Index.cshtml
+++ b/Dashboard/Areas/PlayerMarkEntity/Views/PlayerMark/Index.cshtml
@@ -234,7 +234,7 @@ else
 
                                 }
                             },
-                            { data: "mark.name" },
+                        { data: "mark.name", orderable: false},
                             // { data: "used" },
                             // { data: "count" },
                             { data: "dateTo" },
