--- a/Dashboard/Areas/AccountSubscriptionEntity/Views/AccountSubscription/Index.cshtml
+++ b/Dashboard/Areas/AccountSubscriptionEntity/Views/AccountSubscription/Index.cshtml
@@ -197,7 +197,40 @@ else
                         // Columns Setups
                         columns: [
                             { data: "id" },
-                            { data: "account.name", orderable: false, },
+                            {
+                                data: "account",
+                                orderable: false,
+                                render: function (data, type, row) {
+                                    var span = '';
+
+                                    if (data.imageUrl != null && data.imageUrl != '') {
+
+                                        return '<div class="d-flex justify-content-left align-items-center"><div class= "avatar-wrapper" ><div class="avatar me-1">'
+                                            + '<img src="' + data.imageUrl + '"  height="32" width="32">'
+                                            + span
+                                            + '</div></div>'
+                                            + ' <div class= "">'
+                                            + '<a href="/AccountEntity/Account/Profile/' + row.fk_Account + '" target="_blank" class= "user_name text-truncate">'
+                                            + '<span class= "fw-bolder">' + data.fullName + '</span></a> '
+                                            + '<a href="https://wa.me/2' + data.phoneNumber + '" target="_blank" class= "user_name text-truncate text-success">'
+                                            + '<i class="fab fa-whatsapp"></i>'
+                                            + '<small class= "emp_post text-muted" ></small ></div></div>';
+                                    }
+                                    else {
+                                        return '<div class="d-flex justify-content-left align-items-center"><div class= "avatar-wrapper" >'
+                                            + '<div class="avatar  bg-light-dark  me-1"><span class="avatar-content"></span>' + span + '</div>'
+                                            + '</div>'
+                                            + ' <div class= "">'
+                                            + '<a href="/AccountEntity/Account/Profile/' + row.fk_Account + '"  target="_blank" class= "user_name text-truncate">'
+                                            + '<span class= "fw-bolder">' + data.fullName + '</span></a> '
+                                            + '<a href="https://wa.me/2' + data.phoneNumber + '" target="_blank" class= "user_name text-truncate text-success">'
+                                            + '<i class="fab fa-whatsapp"></i>'
+                                            + '<small class= "emp_post text-muted" ></small ></div></div>';
+                                    }
+
+
+                                }
+                            },
                             { data: "season.name", orderable: false, },
                             { data: "subscription.name", orderable: false, },
                             { data: "cost" },
