--- a/Dashboard/Areas/AccountTeamGameWeakEntity/Views/AccountTeamGameWeak/Index.cshtml
+++ b/Dashboard/Areas/AccountTeamGameWeakEntity/Views/AccountTeamGameWeak/Index.cshtml
@@ -206,6 +206,7 @@ else
                             data.DashboardSearch = $("#DataTables_Table_0_filter input").val();
                             data.PointsFrom = $("#PointsFrom").length > 0 ? $("#PointsFrom").val() : null;
                             data.PointsTo = $("#PointsTo").length > 0 ? $("#PointsTo").val() : null;
+                            data.UseCards = $("#UseCards").length > 0 ? $("#UseCards").val() : null;
                                                         
                             return JSON.stringify(data);
                         }
