--- a/Dashboard/Areas/AccountTeamGameWeakEntity/Views/AccountTeamGameWeak/Filter.cshtml
+++ b/Dashboard/Areas/AccountTeamGameWeakEntity/Views/AccountTeamGameWeak/Filter.cshtml
@@ -15,7 +15,7 @@
     <div class="card-body mt-2">
         <form asp-action="LoadTable" class="filter">
             <div class="row g-1 mb-md-1">
-                
+
                 <div class="col-md-6">
                     <label asp-for="AccountFullName" class="form-label"></label>
                     <div class="mb-0">
@@ -48,25 +48,36 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <label asp-for="CreatedAtFrom" class="form-label"></label>
-                    <div class="mb-0">
-                        <input type="text" class="form-control dt-date flatpickr-range dt-input flatpickr-input active" data-column="1" placeholder="@Localizer.Get("From Date To Date")" data-column-index="0" name="dt_date" readonly="readonly">
-                        <input type="hidden" class="form-control dt-date start_date dt-input" data-column="1" data-column-index="0" asp-for="CreatedAtFrom">
-                        <input type="hidden" class="form-control dt-date end_date dt-input" asp-for="CreatedAtTo" data-column="1" data-column-index="0">
-                    </div>
-                </div>
                 <div class="col-md-6 col-12">
                     <div class="mb-1">
                         <label asp-for="PointsFrom" class="form-label">@Localizer.Get("PointsFrom")</label>
                         <input type="text" class="form-control" asp-for="PointsFrom">
                     </div>
                 </div>
-    
+
                 <div class="col-md-6 col-12">
                     <div class="mb-1">
                         <label asp-for="PointsTo" class="form-label">@Localizer.Get("PointsTo")</label>
                         <input type="text" class="form-control" asp-for="PointsTo">
+                    </div>
+                </div>
+                <div class="col-md-6 col-12">
+                    <div class="mb-1">
+                        <label asp-for="UseCards" class="form-label"></label>
+                        <select class="form-control select2" asp-for="UseCards">
+                            <option value="">@Localizer.Get("All")</option>
+                            <option value="true">@Localizer.Get("Yes")</option>
+                            <option value="false">@Localizer.Get("No")</option>
+                        </select>
+                        <span asp-validation-for="UseCards" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <label asp-for="CreatedAtFrom" class="form-label"></label>
+                    <div class="mb-0">
+                        <input type="text" class="form-control dt-date flatpickr-range dt-input flatpickr-input active" data-column="1" placeholder="@Localizer.Get("From Date To Date")" data-column-index="0" name="dt_date" readonly="readonly">
+                        <input type="hidden" class="form-control dt-date start_date dt-input" data-column="1" data-column-index="0" asp-for="CreatedAtFrom">
+                        <input type="hidden" class="form-control dt-date end_date dt-input" asp-for="CreatedAtTo" data-column="1" data-column-index="0">
                     </div>
                 </div>
             </div>
