--- a/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
@@ -144,6 +144,8 @@
                             data.AccountFullName = $("#AccountFullName").length > 0 ? $("#AccountFullName").val() : '@Model.AccountFullName';
                             data.Email = $("#Email").length > 0 ? $("#Email").val() : '@Model.Email';
                             data.Phone = $("#Phone").length > 0 ? $("#Phone").val() : '@Model.Phone';
+                            data.LastActiveFrom = $("#LastActiveFrom").length > 0 ? $("#LastActiveFrom").val() : '@Model.LastActiveFrom';
+                            data.LastActiveTo = $("#LastActiveTo").length > 0 ? $("#LastActiveTo").val() : '@Model.LastActiveTo';
                             data.CreatedAtFrom = $("#CreatedAtFrom").length > 0 ? $("#CreatedAtFrom").val() : '@Model.CreatedAtFrom';
                             data.CreatedAtTo = $("#CreatedAtTo").length > 0 ? $("#CreatedAtTo").val() : '@Model.CreatedAtTo';
                             data.DashboardSearch = $("#DataTables_Table_0_filter input").val();
