--- a/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/CreateOrEdit.cshtml
@@ -79,7 +79,7 @@
                                         <div class="col-md-4 col-12">
                                             <div class="mb-1">
                                                 <label asp-for="TotalMoney" class="form-label"></label>
-                                                <input asp-for="TotalMoney" class="form-control" placeholder="@Localizer.Get("Enter") @(Localizer.Get("TotalMoney"))" />
+                                                <input type="text" asp-for="TotalMoney" class="form-control" placeholder="@Localizer.Get("Enter") @(Localizer.Get("TotalMoney"))" />
                                                 <span asp-validation-for="TotalMoney" class="text-danger"></span>
                                             </div>
                                         </div>
