--- a/Dashboard/Areas/AccountSubscriptionEntity/Views/AccountSubscription/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/AccountSubscriptionEntity/Views/AccountSubscription/CreateOrEdit.cshtml
@@ -56,7 +56,7 @@
                                             <div class="col-md-12 col-12">
                                                 <div class="mb-1">
                                                     <label asp-for="Fk_Account" class="form-label"></label>
-                                                    <select class="form-control select2" asp-for="Fk_Account" asp-items="@(new SelectList(ViewData["Account"] as Dictionary<string,string>,"Key","Value"))"></select>
+                                                    <select class="form-control select2" asp-for="Fk_Account" ></select>
                                                     <span asp-validation-for="Fk_Account" class="text-danger"></span>
                                                 </div>
                                             </div>
@@ -138,7 +138,7 @@
 
 @section scripts{
     <script>
-
+    
         function resetRepeaterData() {
             $(".game-id").last().val('0');
            $(".game-name").last().val('');
